# rootconfig

./: .gitignore  Pipfile  README.md  pyproject.toml  setup.py
.github/workflows/: ci-testing.yml  python-package.yml
base_config/: base_config.py
baseconfig/: __init__.py  baseconfig.py
rootconfig/: __init__.py  rootconfig.py
tests/: test_argparse.py  test_type_checking.py  type_checking.py
