[build-system]
requires = ["setuptools>=65.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rootconfig"
authors = [
    {email = "yinhanzhi@gmail.com"},
    {name = "Hanzhi Yin"}
]
requires-python = ">=3.10"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
dependencies = []
dynamic = ["version", "readme"]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests"]

[tool.setuptools.dynamic]
version = {attr = "rootconfig.__version__"}
readme = {file = ["README.md"]}
